// Путь: cmd/fyne-gui/new-core/protocol/chat.proto

syntax = "proto3";

package protocol;

option go_package = "./";

// ---------------------------------------------------------------- //
// --- СООБЩЕНИЯ, ОТНОСЯЩИЕСЯ К СОДЕРЖИМОМУ ЧАТА --- //
// ---------------------------------------------------------------- //
// Эти сообщения будут сериализованы, зашифрованы и помещены
// в поле `ciphertext` нашего нового `SecureEnvelope`.
// ---------------------------------------------------------------- //


// ChatContent - это обертка для всего, что может появиться в ленте чата.
message ChatContent {
    oneof payload {
        TextMessage text = 1;         // Обычное текстовое сообщение
        FileMetadata file = 2;        // Анонс файла для скачивания
        ReadReceipts receipts = 3;    // Уведомления о прочтении
        MessageEdit edit = 4;         // Редактирование предыдущего сообщения
        MessageDelete delete = 5;       // Удаление предыдущего сообщения
        // ... в будущем здесь появятся стикеры, опросы и т.д.
    }
}


// TextMessage представляет собой простое текстовое сообщение.
message TextMessage {
  string body = 1;                     // Текст сообщения
  string reply_to_message_id = 2;      // ID сообщения, на которое отвечаем (опционально)
  repeated MessageEntity entities = 3; // Для форматирования (жирный, курсив, ссылки)
}

// MessageEntity описывает форматирование части текста.
// (Аналогично API Telegram)
message MessageEntity {
  enum Type {
    MENTION = 0;
    HASHTAG = 1;
    BOT_COMMAND = 2;
    URL = 3;
    EMAIL = 4;
    BOLD = 5;
    ITALIC = 6;
    CODE = 7;
    PRE = 8;
  }
  Type type = 1;
  int32 offset = 2; // Смещение в UTF-16 кодовых единицах
  int32 length = 3; // Длина форматированного участка
  string url = 4;   // Для ссылок
}


// ReadReceipts - уведомление о прочтении одного или нескольких сообщений.
message ReadReceipts {
  repeated string message_ids = 1;
}

// MessageEdit - команда на редактирование сообщения.
message MessageEdit {
  string target_message_id = 1; // Какое сообщение редактируем
  TextMessage new_content = 2;  // Новое содержимое
}

// MessageDelete - команда на удаление сообщения.
message MessageDelete {
  repeated string message_ids = 1;
}


// FileMetadata - "Анонс" файла.
// Это сообщение появляется в чате, чтобы показать плашку с файлом.
message FileMetadata {
  string transfer_id = 1;     // Уникальный ID для этой передачи (генерируется GUI, UUID)
  string filename = 2;        // Оригинальное имя файла
  int64  size_bytes = 3;      // Полный размер файла в байтах
  string hash_sha256 = 4;     // Хеш всего файла для проверки целостности
  string mime_type = 5;       // MIME-тип файла (например, "image/jpeg")
  repeated string seeders = 6;  // Список PeerID тех, кто имеет полную копию
}