// Путь: cmd/fyne-gui/new-core/protocol/signaling.proto

syntax = "proto3";

package protocol;

option go_package = "./";


// ---------------------------------------------------------------- //
// --- СООБЩЕНИЯ ДЛЯ СИГНАЛИЗАЦИИ WEBRTC --- //
// ---------------------------------------------------------------- //
// Эти сообщения НЕ шифруются дополнительно, так как SDP и ICE
// не содержат чувствительной информации, а само их шифрование
// может нарушить работу некоторых NAT/STUN серверов. Они будут
// передаваться напрямую.
// ---------------------------------------------------------------- //


// SignalingMessage - это обертка для всех сообщений, связанных
// с установкой и управлением P2P медиа-соединениями.
message SignalingMessage {
    string call_id = 1; // Уникальный ID для этого конкретного звонка (генерируется GUI)

    oneof payload {
        CallOffer      offer = 2;       // Предложение начать звонок
        CallAnswer     answer = 3;      // Ответ на предложение
        ICECandidate   candidate = 4;   // Кандидат для установки NAT-пробивания
        CallHangup     hangup = 5;      // Завершение звонка
        CallNegotiation negotiation = 6; // Для пересогласования (вкл/выкл видео)
    }
}

// CallOffer содержит SDP "предложение".
message CallOffer {
    string sdp = 1;
    // НОВОЕ ПОЛЕ: Карта с метаданными звонка.
    // Позволяет GUI передавать дополнительную информацию, не меняя протокол.
    // Например: {"has_video": "true", "caller_name": "Alice"}
    map<string, string> metadata = 2;
}

// CallAnswer содержит SDP "ответ".
message CallAnswer {
    string sdp = 1;
}

// ICECandidate содержит информацию для установки прямого соединения.
message ICECandidate {
    string candidate = 1; // Переименовано для ясности
}

// CallHangup - простое сообщение для завершения звонка.
message CallHangup {
    enum Reason {
        REASON_UNSPECIFIED = 0;
        REJECTED = 1;      // Отклонено
        HUNG_UP = 2;       // Завершено пользователем
        TIMEOUT = 3;       // Не отвечен
        ERROR = 4;         // Произошла ошибка
    }
    Reason reason = 1;
}

// CallNegotiation используется для изменения параметров звонка "на лету".
message CallNegotiation {
    string sdp = 1;
}